--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -703,7 +703,7 @@ gui.tooltip.plugin_decrypt = Decryption Plug-ins
 gui.tooltip.plugin_host = Host Plug-ins
 gui.tooltip.statusbar.premium = On/Off of the Premiumdownloads
 gui.tooltip.statusbar.simultan_downloads = Max. simultan downloads
-gui.tooltip.statusbar.speedlimiter = GSpeedlimitation(kb/s) [0:infinite]
+gui.tooltip.statusbar.speedlimiter = Speedlimitation(kb/s) [0:infinite]
 gui.treetable.header_1.tree = Packages
 gui.treetable.header_2.files = Files
 gui.treetable.header_3.hoster = Hoster
@@ -839,7 +839,7 @@ linkinformation.speed.name = Speed
 linkinformation.waittime.name = Waittime
 modules.container.dlc.containerinfo = <div style="width:450px;font-family:Geneva, Arial, Helvetica, sans-serif; font-size: 9px;"><font color="#0066FF"><strong>DLContainer succesfully loaded.</strong></font><br/><hr/><table style="width:450px"><tr><td>Created from </td><td>%s</td></tr><tr><td>Created with </td><td>%s</td></tr><tr><td>Packages </td><td>%s</td></tr><tr><td>Category </td><td>%s</td></tr><tr ><td colspan="2">%s</td></tr></table></div>
 modules.container.dlc.loadedmessage = DownloadLinkContainer loaded
-modules.packagemanager.loadednewpackage.title = Paket Update installed
+modules.packagemanager.loadednewpackage.title = Package Update installed
 modules.packagemanager.packagename = JD-Update
 modules.reconnect.pleaseSelect = Method:
 modules.reconnect.types.batch = Batch
@@ -847,14 +847,14 @@ modules.reconnect.types.extern = External
 modules.reconnect.types.liveheader = LiveHeader/Curl
 modules.unrar.enabled.instanthelp = http://ns2.km32221.keymachine.de/jdownloader/web/page.php?id=17
 modules.unrar.name = RAR extractor
-plugins.SerienJunkies.CatDialog.action = Cosse an action
+plugins.SerienJunkies.CatDialog.action = Chose an action
 plugins.SerienJunkies.CatDialog.title = SerienJunkies ::CAT::
 plugins.container.ccf.useCCF2RSDF = Use CCF2RSDF instead of Online Decrypter
 plugins.container.decrypt = Decrypt link %s
 plugins.container.dlc.extendedInfos = Ask for extended information at creation of DLC
 plugins.container.dlc.uploaderName = Include uploader name
 plugins.container.exit = Finished. Found %s links
-plugins.container.found = Prozess %s links
+plugins.container.found = Process %s links
 plugins.container.open = Open Container
 plugins.decrypt.general.downloadsDecrypted = Downloads decrypted
 plugins.decrypt.general.hosterSelection = Hosterselection
@@ -1018,3 +1018,4 @@ plugins.optional.httpliveheaderscripter.gui.menu.file.importjdlh = Import JD-Liv
 plugins.optional.httpliveheaderscripter.gui.menu.file.save = Save file
 plugins.optional.httpliveheaderscripter.gui.title = HTTP Live Header Script creater
 plugins.optional.httpliveheaderscripter.name = HTTPLiveHeaderScripter
+plugin.rapidshare.tickettime= Wait %s min. for ticket
