--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -867,8 +867,8 @@ plugins.optional.webinterface.port = Port
 plugins.optional.webinterface.refresh = AutoRefresh
 plugins.optional.webinterface.refresh_interval = Refresh Interval
 plugins.rapidshare.captcha = OCR & Wartezeit
-plugins.rapidshare.menu.disable_premium = Deaktivieren
-plugins.rapidshare.menu.enable_premium = Aktivieren
+plugins.rapidshare.menu.disable_premium = Account aktiv
+plugins.rapidshare.menu.enable_premium = Account aktiv
 plugins.rapidshare.menu.forcefreewhilehh = Free Download während Happy Hour erzwingen
 plugins.rapidshare.menu.happyHour = Happy Hours
 plugins.rapidshare.menu.happyHours = Happy Hours Abfrage
