--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -1,22 +1,22 @@
 addons.jdlowspeed.statusmessage.enabled = Low Speederkennung einschalten
 addons.jdshutdown.menu.enable = Herunterfahren aktivieren
-addons.schedule.menu.abort = Abbrechen
+addons.schedule.menu.abort = Abgebrochen!
 addons.schedule.menu.add = Hinzufügen
 addons.schedule.menu.close = Schließen
 addons.schedule.menu.create = Neu
 addons.schedule.menu.edit = Bearbeiten
-addons.schedule.menu.finished = Abgeschlossen
+addons.schedule.menu.finished = Abgeschlossen!
 addons.schedule.menu.maxdl = max. Downloads
 addons.schedule.menu.maxspeed = max. DownloadGeschwindigkeit
 addons.schedule.menu.p_time = Bitte einen Zeitpunkt in der Zukunft wählen
-addons.schedule.menu.reconnect = Reconnect?
-addons.schedule.menu.redo = Zurückstellen in[Stunden]
-addons.schedule.menu.remain = Verbleibend:
+addons.schedule.menu.reconnect = Reconnect
+addons.schedule.menu.redo = Zurückstellen in [Stunden]
+addons.schedule.menu.remain = Verbleibend: 
 addons.schedule.menu.remove = Entfernen
 addons.schedule.menu.running = Angehalten!
 addons.schedule.menu.settings = Einstellungen
 addons.schedule.menu.start = Start
-addons.schedule.menu.start_stop = Start/Stop Download?
+addons.schedule.menu.start_stop = Start/Stop Download
 addons.schedule.menu.stop = Stop
 addons.schedule.menu.time = Zeitpunkt wählen:
 addons.schedule.name = Zeitplaner
