--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -541,10 +541,18 @@ gui.logDialog.title = jDownloader Log
 gui.logdialog.yourlog = Uploaded log: Edit possible!
 gui.mainframe.title.updatemessage = --> UPDATE(S) AVAILABLE <-- :
 gui.menu.action = Action
-gui.menu.action.about.accel = a
-gui.menu.action.about.desc = About jDownloader
-gui.menu.action.about.mnem = a
-gui.menu.action.about.name = About
+gui.menu.action.about.accel = CTRL+F1
+gui.menu.action.about.desc = About JDownloader
+gui.menu.action.about.mnem = A
+gui.menu.action.about.name = About JDownloader
+gui.menu.action.install.accel = CTRL+I
+gui.menu.action.install.desc = Install add-on (*.jdu)
+gui.menu.action.install.mnem = I
+gui.menu.action.install.name = Install add-on
+gui.menu.action.wiki.accel = CTRL+W
+gui.menu.action.wiki.desc = Open JDownloader Wikipedia
+gui.menu.action.wiki.mnem = W
+gui.menu.action.wiki.name = Open Wikipedia
 gui.menu.action.add.accel = CTRL+V
 gui.menu.action.add.desc = Adds one or more download links
 gui.menu.action.add.mnem = H
@@ -1042,3 +1050,61 @@ plugin.rapidshare.tickettime= Wait %s min. for ticket
 plugins.host.rapidshare.errors.0b37866ecbc00ce1857fa40852df6fef = Downloadsession expired. Try again.
 plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = 10 GB limit reached.
 plugins.hoster.rapidshare.com.info.error = <div style='text-align:center; width:100%; height:100%; color:red;'><b>Account could not be found!</b></div>
+addons.jdlowspeed.statusmessage.disabled = Disable Low Speeddetection
+gui.config.download.buffersize = Max. Buffersize[MB]
+gui.config.download.downloadThread = Write and download paralell
+gui.config.download.ipcheck.externalinterval = External IP Check Interval [sec]
+gui.config.download.socks.host = Host/IP
+gui.config.download.socks.port = Port
+gui.config.download.use_socks = Use Socks-Proxy
+gui.config.liveHeader.btnFindIP = Fetch Router IP
+gui.plugins.decrypt.wiireloaded.calcresult = result of the calcualtion
+interaction.jdchat.deslanguage = to: 
+interaction.jdchat.native = to: 
+jdownloader.org = jDownloader.org
+locale.lngs.arabic = Arabic
+locale.lngs.bulgarian = Bulgarian
+locale.lngs.chinese_simplified_ = Chinese (Simplified)
+locale.lngs.chinese_traditional_ = Chinese (Traditional)
+locale.lngs.croatian = Croatian
+locale.lngs.czech = Czech
+locale.lngs.danish = Danish
+locale.lngs.dutch = Dutch
+locale.lngs.english = English
+locale.lngs.finnish = Finnish
+locale.lngs.french = French
+locale.lngs.german = German
+locale.lngs.greek = Greek
+locale.lngs.hindi = Hindi
+locale.lngs.italian = Italian
+locale.lngs.japanese = Japanese
+locale.lngs.korean = Korean
+locale.lngs.norwegian = Norwegian
+locale.lngs.polish = Polish
+locale.lngs.portuguese = Portuguese
+locale.lngs.romanian = Romanian
+locale.lngs.russian = Russian
+locale.lngs.spanish = Spanish
+locale.lngs.swedish = Swedish
+plugins.decrypt.gwarezcc.preferdlc = Prefer DLC Container
+plugins.decrypt.linkbankeu = Check Mirror Links
+plugins.decrypt.relinkus.useccf = Use CCF Container
+plugins.decrypt.relinkus.usedlc = Use DLC Container
+plugins.decrypt.relinkus.usersdf = Use RSDF Container
+plugins.hoster.rapidshare.de.premiumPass = Premium password
+plugins.hoster.rapidshare.de.premiumUser = Premium username
+plugins.hoster.rapidshare.de.usePremium = Use Premium Account
+plugins.optional.jdchat.doautotranslate = Translate Chat
+plugins.optional.jdchat.doautotranslateself = Translate everything I say
+plugins.optional.jdchat.locale = Language settings
+plugins.optional.jdchat.menu.windowstatus = Chatwindow
+plugins.optional.jdchat.name = JD Chat
+plugins.optional.jdchat.performonstart = Perform commands after connection estabilished
+plugins.optional.jdchat.user = Nickname
+plugins.optional.newsfeeds.getLatestSubscribedDownloads = Get latest subscribed Downloads
+plugins.optional.newsfeeds.manageDownloadSubscriptions = Manage Download Subscriptions
+plugins.optional.newsfeeds.manageFeeds = Manage Feeds
+plugins.optional.newsfeeds.pluginTitle = Newsfeed Check
+
+
+
