--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -437,7 +437,7 @@ gui.droptarget.label = Drop links here!
 gui.droptarget.title = Link Collector
 gui.frame.packageinfo.entrycomment = Comment
 gui.frame.packageinfo.entrydldirectory = Downloaddirectory
-gui.frame.packageinfo.entrylinks = Kinks
+gui.frame.packageinfo.entrylinks = Links
 gui.frame.packageinfo.entryloaded = Loaded
 gui.frame.packageinfo.entryname = Name
 gui.frame.packageinfo.entrypackagesize = Packagesize
@@ -739,7 +739,7 @@ gui.treetable.packagestatus.links_active = active
 gui.treetable.part.label = File
 gui.treetable.part.label_package = Package
 gui.treetable.part.label_update = Update
-gui.treetable.parts = Parts
+gui.treetable.parts = Part(s)
 gui.warning.reconnectFailed = Reconnect failed!
 gui.warning.reconnectSuccess = Reconnect successfully!
 gui.warning.restartNeeded = You need to restart jD!
